--- a/playoff.html
+++ b/playoff.html
@@ -6,30 +6,48 @@
 <style>
 body{margin:0;font-family:Arial;background:#f4f4f4}
 nav{background:#1fa9e0}
-.menu{max-width:1200px;margin:0 auto;display:flex;gap:20px;padding:0 20px}
-.menu-item>a{display:block;color:white;text-decoration:none;font-weight:bold;padding:14px 12px}
+.menu{max-width:1200px;margin:0 auto;display:flex;padding:0 20px}
+.menu a{color:white;text-decoration:none;font-weight:bold;padding:14px}
 
-.wrapper{max-width:1400px;margin:0 auto;background:white;min-height:100vh;padding:30px}
+.wrapper{max-width:1600px;margin:0 auto;background:white;min-height:100vh;padding:30px}
 h1{text-align:center;margin-bottom:40px}
 
-.bracket{display:flex;justify-content:space-between;align-items:flex-start}
-.column{width:32%}
-.title{font-weight:bold;margin-bottom:10px}
+/* BRACKET */
+.bracket{display:grid;grid-template-columns:1fr 120px 1fr;align-items:center}
+.column{position:relative}
+.title{font-weight:bold;margin-bottom:6px}
 
-table{border-collapse:collapse;width:100%;margin-bottom:30px}
-th,td{border:1px solid #999;padding:6px;text-align:center}
+table{border-collapse:collapse;width:100%;margin-bottom:40px}
+th,td{border:1px solid #777;padding:6px;text-align:center}
 th{background:#b7d7f0}
 .team{text-align:left}
 .series{font-weight:bold}
+
+/* CONNECTORS */
+.connector{
+ position:absolute;
+ width:120px;
+ height:2px;
+ background:#000;
+ top:50%;
+ right:-120px;
+}
+.connector.down{top:65%}
+.connector.up{top:35%}
+
+/* ADMIN */
+.admin{border-top:3px solid #1fa9e0;padding-top:30px;margin-top:40px}
+label{display:inline-block;width:140px}
+input,select{padding:4px}
+button{padding:6px 12px}
 </style>
 </head>
 <body>
 
 <nav>
 <div class="menu">
-  <div class="menu-item">
-    <a href="index.html">Extraliga – základní část</a>
-  </div>
+  <a href="index.html">Extraliga – základní část</a>
+  <a href="playoff.html">Extraliga – play off</a>
 </div>
 </nav>
 
@@ -38,6 +56,7 @@ th{background:#b7d7f0}
 
 <div class="bracket">
 
+<!-- LEFT COLUMN -->
 <div class="column">
 <div class="title">1. Semifinále</div>
 <table>
@@ -45,6 +64,7 @@ th{background:#b7d7f0}
 <tr><td class="team">Tým 1</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="series"></td></tr>
 <tr><td class="team">Tým 2</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="series"></td></tr>
 </table>
+<div class="connector up"></div>
 
 <div class="title">2. Semifinále</div>
 <table>
@@ -52,8 +72,13 @@ th{background:#b7d7f0}
 <tr><td class="team">Tým 3</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="series"></td></tr>
 <tr><td class="team">Tým 4</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="series"></td></tr>
 </table>
+<div class="connector down"></div>
 </div>
 
+<!-- CENTER COLUMN -->
+<div></div>
+
+<!-- RIGHT COLUMN -->
 <div class="column">
 <div class="title">Finále</div>
 <table>
@@ -65,9 +90,30 @@ th{background:#b7d7f0}
 
 </div>
 
-<p style="margin-top:40px;color:#666">
-Zatím pouze struktura pavouka (bez logiky). Automatika doplněna později.
-</p>
+<!-- ADMIN -->
+<div class="admin">
+<h2>Admin – zápis výsledku (play off)</h2>
+
+<label>Fáze:</label>
+<select>
+<option>Semifinále 1</option>
+<option>Semifinále 2</option>
+<option>Finále</option>
+</select><br><br>
+
+<label>Tým domácí:</label>
+<input placeholder="zatím neurčeno"><br><br>
+
+<label>Tým hosté:</label>
+<input placeholder="zatím neurčeno"><br><br>
+
+<label>Skóre:</label>
+<input type="number" style="width:60px"> :
+<input type="number" style="width:60px"><br><br>
+
+<button>Uložit výsledek</button>
+<p style="color:#666">Zatím bez logiky – jen rozhraní.</p>
+</div>
 
 </div>
 </body>
