--- a/playoff.html
+++ b/playoff.html
@@ -5,10 +5,19 @@
 <title>Extraliga – Play off</title>
 <style>
 body{margin:0;font-family:Arial;background:#f4f4f4}
-nav{background:#1fa9e0}
-.menu{max-width:1200px;margin:0 auto;display:flex;padding:0 20px}
-.menu a{color:white;text-decoration:none;font-weight:bold;padding:14px}
 
+/* MENU – STEJNÉ JAKO INDEX */
+nav{background:#1fa9e0}
+.menu{max-width:1200px;margin:0 auto;display:flex;gap:20px;padding:0 20px}
+.menu-item{position:relative}
+.menu-item>a{display:block;color:white;text-decoration:none;font-weight:bold;padding:14px 12px}
+.menu-item>a.active{background:white;color:#1fa9e0;border-radius:4px}
+.dropdown{display:none;position:absolute;top:100%;left:0;background:#fff;min-width:240px;box-shadow:0 4px 10px rgba(0,0,0,.15)}
+.dropdown a{display:block;padding:10px 12px;color:#1fa9e0;text-decoration:none}
+.dropdown a:hover{background:#f0f0f0}
+.menu-item:hover .dropdown{display:block}
+
+/* LAYOUT */
 .wrapper{max-width:1600px;margin:0 auto;background:white;min-height:100vh;padding:30px}
 h1{text-align:center;margin-bottom:40px}
 
@@ -32,8 +41,8 @@ th{background:#b7d7f0}
  top:50%;
  right:-120px;
 }
-.connector.down{top:65%}
 .connector.up{top:35%}
+.connector.down{top:65%}
 
 /* ADMIN */
 .admin{border-top:3px solid #1fa9e0;padding-top:30px;margin-top:40px}
@@ -45,10 +54,41 @@ button{padding:6px 12px}
 <body>
 
 <nav>
-<div class="menu">
-  <a href="index.html">Extraliga – základní část</a>
-  <a href="playoff.html">Extraliga – play off</a>
-</div>
+  <div class="menu">
+
+    <div class="menu-item">
+      <a>Extraliga</a>
+      <div class="dropdown">
+        <a href="index.html">Extraliga – základní část</a>
+        <a href="playoff.html" class="active">Extraliga – play off</a>
+      </div>
+    </div>
+
+    <div class="menu-item">
+      <a>Mistrovství světa</a>
+      <div class="dropdown">
+        <a href="ms.html">MS – základní skupiny</a>
+        <a href="#">MS – play off</a>
+      </div>
+    </div>
+
+    <div class="menu-item">
+      <a>Olympijský turnaj</a>
+      <div class="dropdown">
+        <a href="olympiada.html">OH – skupiny</a>
+        <a href="#">OH – play off</a>
+      </div>
+    </div>
+
+    <div class="menu-item">
+      <a>Světový pohár</a>
+      <div class="dropdown">
+        <a href="worldcup.html">SP – skupiny</a>
+        <a href="#">SP – play off</a>
+      </div>
+    </div>
+
+  </div>
 </nav>
 
 <div class="wrapper">
@@ -56,7 +96,6 @@ button{padding:6px 12px}
 
 <div class="bracket">
 
-<!-- LEFT COLUMN -->
 <div class="column">
 <div class="title">1. Semifinále</div>
 <table>
@@ -75,10 +114,8 @@ button{padding:6px 12px}
 <div class="connector down"></div>
 </div>
 
-<!-- CENTER COLUMN -->
 <div></div>
 
-<!-- RIGHT COLUMN -->
 <div class="column">
 <div class="title">Finále</div>
 <table>
@@ -90,7 +127,6 @@ button{padding:6px 12px}
 
 </div>
 
-<!-- ADMIN -->
 <div class="admin">
 <h2>Admin – zápis výsledku (play off)</h2>
 
@@ -116,5 +152,6 @@ button{padding:6px 12px}
 </div>
 
 </div>
+
 </body>
 </html>
