--- a/playoff.html
+++ b/playoff.html
@@ -6,46 +6,42 @@
 <style>
 body{margin:0;font-family:Arial;background:#f4f4f4}
 
-/* MENU – STEJNÉ JAKO INDEX */
+/* MENU */
 nav{background:#1fa9e0}
 .menu{max-width:1200px;margin:0 auto;display:flex;gap:20px;padding:0 20px}
 .menu-item{position:relative}
 .menu-item>a{display:block;color:white;text-decoration:none;font-weight:bold;padding:14px 12px}
-.menu-item>a.active{background:white;color:#1fa9e0;border-radius:4px}
 .dropdown{display:none;position:absolute;top:100%;left:0;background:#fff;min-width:240px;box-shadow:0 4px 10px rgba(0,0,0,.15)}
 .dropdown a{display:block;padding:10px 12px;color:#1fa9e0;text-decoration:none}
-.dropdown a:hover{background:#f0f0f0}
 .menu-item:hover .dropdown{display:block}
 
 /* LAYOUT */
-.wrapper{max-width:1600px;margin:0 auto;background:white;min-height:100vh;padding:30px}
-h1{text-align:center;margin-bottom:40px}
+.wrapper{max-width:1500px;margin:0 auto;background:white;min-height:100vh;padding:30px}
+h1{text-align:center;margin-bottom:30px}
 
 /* BRACKET */
-.bracket{display:grid;grid-template-columns:1fr 120px 1fr;align-items:center}
+.bracket{position:relative;display:grid;grid-template-columns:1fr 120px 1fr;column-gap:40px}
 .column{position:relative}
-.title{font-weight:bold;margin-bottom:6px}
+.title{font-weight:bold;margin:20px 0 6px}
 
-table{border-collapse:collapse;width:100%;margin-bottom:40px}
-th,td{border:1px solid #777;padding:6px;text-align:center}
-th{background:#b7d7f0}
+/* TABLE STYLE */
+table{border-collapse:collapse;width:100%}
+th,td{border:1px solid #999;padding:6px;text-align:center}
+th{background:#1fa9e0;color:white}
 .team{text-align:left}
 .series{font-weight:bold}
 
 /* CONNECTORS */
-.connector{
- position:absolute;
- width:120px;
- height:2px;
- background:#000;
- top:50%;
- right:-120px;
-}
-.connector.up{top:35%}
-.connector.down{top:65%}
+.line-h{position:absolute;height:3px;background:#000}
+.line-v{position:absolute;width:3px;background:#000}
+
+.sf1-h{top:120px;left:100%;width:60px}
+.sf2-h{top:320px;left:100%;width:60px}
+.mid-v{top:120px;left:calc(100% + 60px);height:200px}
+.fin-h{top:220px;left:calc(100% + 60px);width:60px}
 
 /* ADMIN */
-.admin{border-top:3px solid #1fa9e0;padding-top:30px;margin-top:40px}
+.admin{border-top:3px solid #1fa9e0;padding-top:30px;margin-top:50px}
 label{display:inline-block;width:140px}
 input,select{padding:4px}
 button{padding:6px 12px}
@@ -54,41 +50,15 @@ button{padding:6px 12px}
 <body>
 
 <nav>
-  <div class="menu">
-
-    <div class="menu-item">
-      <a>Extraliga</a>
-      <div class="dropdown">
-        <a href="index.html">Extraliga – základní část</a>
-        <a href="playoff.html" class="active">Extraliga – play off</a>
-      </div>
+<div class="menu">
+  <div class="menu-item">
+    <a>Extraliga</a>
+    <div class="dropdown">
+      <a href="index.html">Extraliga – základní část</a>
+      <a href="playoff.html">Extraliga – play off</a>
     </div>
-
-    <div class="menu-item">
-      <a>Mistrovství světa</a>
-      <div class="dropdown">
-        <a href="ms.html">MS – základní skupiny</a>
-        <a href="#">MS – play off</a>
-      </div>
-    </div>
-
-    <div class="menu-item">
-      <a>Olympijský turnaj</a>
-      <div class="dropdown">
-        <a href="olympiada.html">OH – skupiny</a>
-        <a href="#">OH – play off</a>
-      </div>
-    </div>
-
-    <div class="menu-item">
-      <a>Světový pohár</a>
-      <div class="dropdown">
-        <a href="worldcup.html">SP – skupiny</a>
-        <a href="#">SP – play off</a>
-      </div>
-    </div>
-
   </div>
+</div>
 </nav>
 
 <div class="wrapper">
@@ -100,28 +70,31 @@ button{padding:6px 12px}
 <div class="title">1. Semifinále</div>
 <table>
 <tr><th>Tým</th><th>Z1</th><th>Z2</th><th>Z3</th><th>Z4</th><th>Z5</th><th>Z6</th><th>Z7</th><th>Stav série</th></tr>
-<tr><td class="team">Tým 1</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="series"></td></tr>
-<tr><td class="team">Tým 2</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="series"></td></tr>
+<tr><td class="team">Tým 1</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td class="team">Tým 2</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 </table>
-<div class="connector up"></div>
 
 <div class="title">2. Semifinále</div>
-<table>
+<table style="margin-top:70px">
 <tr><th>Tým</th><th>Z1</th><th>Z2</th><th>Z3</th><th>Z4</th><th>Z5</th><th>Z6</th><th>Z7</th><th>Stav série</th></tr>
-<tr><td class="team">Tým 3</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="series"></td></tr>
-<tr><td class="team">Tým 4</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="series"></td></tr>
+<tr><td class="team">Tým 3</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td class="team">Tým 4</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 </table>
-<div class="connector down"></div>
+
+<div class="line-h sf1-h"></div>
+<div class="line-h sf2-h"></div>
+<div class="line-v mid-v"></div>
+<div class="line-h fin-h"></div>
 </div>
 
 <div></div>
 
 <div class="column">
-<div class="title">Finále</div>
+<div class="title" style="margin-top:200px">Finále</div>
 <table>
 <tr><th>Tým</th><th>Z1</th><th>Z2</th><th>Z3</th><th>Z4</th><th>Z5</th><th>Z6</th><th>Z7</th><th>Stav série</th></tr>
-<tr><td class="team">Vítěz SF1</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="series"></td></tr>
-<tr><td class="team">Vítěz SF2</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td class="series"></td></tr>
+<tr><td class="team">Vítěz SF1</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td class="team">Vítěz SF2</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 </table>
 </div>
 
@@ -129,29 +102,22 @@ button{padding:6px 12px}
 
 <div class="admin">
 <h2>Admin – zápis výsledku (play off)</h2>
-
 <label>Fáze:</label>
 <select>
 <option>Semifinále 1</option>
 <option>Semifinále 2</option>
 <option>Finále</option>
 </select><br><br>
-
 <label>Tým domácí:</label>
-<input placeholder="zatím neurčeno"><br><br>
-
+<input><br><br>
 <label>Tým hosté:</label>
-<input placeholder="zatím neurčeno"><br><br>
-
+<input><br><br>
 <label>Skóre:</label>
 <input type="number" style="width:60px"> :
 <input type="number" style="width:60px"><br><br>
-
 <button>Uložit výsledek</button>
-<p style="color:#666">Zatím bez logiky – jen rozhraní.</p>
 </div>
 
 </div>
-
 </body>
 </html>
