--- a/playoff.html
+++ b/playoff.html
@@ -18,47 +18,16 @@ nav li ul li{width:220px}
 h1{text-align:center}
 .section-title{margin-top:30px;font-weight:bold}
 
-.table{
-border-collapse:collapse;
-width:100%;
-margin-bottom:40px
-}
-.table th,.table td{
-border:1px solid #999;
-padding:6px;
-text-align:center
-}
-.table th{
-background:#bfe0f5
-}
-.table td.team{
-text-align:left;
-padding-left:10px;
-font-weight:bold
-}
+.table{border-collapse:collapse;width:100%;margin-bottom:40px}
+.table th,.table td{border:1px solid #999;padding:6px;text-align:center}
+.table th{background:#bfe0f5}
+.table td.team{text-align:left;padding-left:10px;font-weight:bold}
 
-.bracket{
-display:grid;
-grid-template-columns:1fr 80px 1fr;
-align-items:center;
-gap:10px
-}
-.lines{
-display:flex;
-flex-direction:column;
-align-items:center
-}
-.lines div{
-width:80px;
-height:2px;
-background:#000;
-margin:60px 0
-}
+.bracket{display:grid;grid-template-columns:1fr 80px 1fr;align-items:center;gap:10px}
+.lines{display:flex;flex-direction:column;align-items:center}
+.lines div{width:80px;height:2px;background:#000;margin:60px 0}
 
-.admin{
-border-top:3px solid #2aa7df;
-padding-top:20px
-}
+.admin{border-top:3px solid #2aa7df;padding-top:20px}
 </style>
 </head>
 <body>
@@ -85,73 +54,83 @@ padding-top:20px
 <div>
 <div class="section-title">1. Semifinále</div>
 <table class="table">
-<tr>
-<th>Tým</th><th>Z1</th><th>Z2</th><th>Z3</th><th>Z4</th><th>Z5</th><th>Z6</th><th>Z7</th><th>Stav série</th>
-</tr>
-<tr>
-<td class="team">HC Chemopetrol Litvínov</td>
-<td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-</tr>
-<tr>
-<td class="team">HC Dynamo Pardubice</td>
-<td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-</tr>
+<tr><th>Tým</th><th>Z1</th><th>Z2</th><th>Z3</th><th>Z4</th><th>Z5</th><th>Z6</th><th>Z7</th><th>Stav série</th></tr>
+<tr><td class="team">HC Chemopetrol Litvínov</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td class="team">HC Dynamo Pardubice</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 </table>
 
 <div class="section-title">2. Semifinále</div>
 <table class="table">
-<tr>
-<th>Tým</th><th>Z1</th><th>Z2</th><th>Z3</th><th>Z4</th><th>Z5</th><th>Z6</th><th>Z7</th><th>Stav série</th>
-</tr>
-<tr>
-<td class="team">HC Geus Okna Kladno</td>
-<td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-</tr>
-<tr>
-<td class="team">HC Sparta Praha</td>
-<td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-</tr>
+<tr><th>Tým</th><th>Z1</th><th>Z2</th><th>Z3</th><th>Z4</th><th>Z5</th><th>Z6</th><th>Z7</th><th>Stav série</th></tr>
+<tr><td class="team">HC Geus Okna Kladno</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td class="team">HC Sparta Praha</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 </table>
 </div>
 
-<div class="lines">
-<div></div>
-<div></div>
-</div>
+<div class="lines"><div></div><div></div></div>
 
 <div>
 <div class="section-title">Finále</div>
 <table class="table">
-<tr>
-<th>Tým</th><th>Z1</th><th>Z2</th><th>Z3</th><th>Z4</th><th>Z5</th><th>Z6</th><th>Z7</th><th>Stav série</th>
-</tr>
-<tr>
-<td class="team">Vítěz SF1</td>
-<td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-</tr>
-<tr>
-<td class="team">Vítěz SF2</td>
-<td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-</tr>
+<tr><th>Tým</th><th>Z1</th><th>Z2</th><th>Z3</th><th>Z4</th><th>Z5</th><th>Z6</th><th>Z7</th><th>Stav série</th></tr>
+<tr><td class="team">Vítěz SF1</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td class="team">Vítěz SF2</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 </table>
 </div>
 </div>
 
 <div class="admin">
 <h2>Admin – zápis výsledku (play off)</h2>
+
 Heslo: <input type="password"><br><br>
+
 Fáze:
-<select>
-<option>Semifinále 1</option>
-<option>Semifinále 2</option>
-<option>Finále</option>
+<select id="phase">
+<option value="sf1">Semifinále 1</option>
+<option value="sf2">Semifinále 2</option>
+<option value="fin">Finále</option>
 </select><br><br>
-Domácí: <select></select><br><br>
-Hosté: <select></select><br><br>
-Skóre: <input size="2"> : <input size="2"><br><br>
+
+Domácí:
+<select id="home"></select><br><br>
+
+Hosté:
+<select id="away"></select><br><br>
+
+Skóre:
+<input size="2"> : <input size="2"><br><br>
+
 <button>Uložit výsledek</button>
 </div>
 
 </div>
+
+<script>
+const teams = {
+  sf1: ["HC Chemopetrol Litvínov","HC Dynamo Pardubice"],
+  sf2: ["HC Geus Okna Kladno","HC Sparta Praha"],
+  fin: ["Vítěz SF1","Vítěz SF2"]
+};
+
+function fillTeams(){
+  const phase = document.getElementById("phase").value;
+  const home = document.getElementById("home");
+  const away = document.getElementById("away");
+  home.innerHTML = "";
+  away.innerHTML = "";
+  teams[phase].forEach(t=>{
+    const o1 = document.createElement("option");
+    o1.value = t; o1.textContent = t;
+    const o2 = document.createElement("option");
+    o2.value = t; o2.textContent = t;
+    home.appendChild(o1);
+    away.appendChild(o2);
+  });
+}
+
+document.getElementById("phase").addEventListener("change", fillTeams);
+fillTeams();
+</script>
+
 </body>
 </html>
